<resources>
    <string name="app_name">Grocery</string>
    <string name="title_activity_recepie">Recepie</string>
    <!-- Strings used for fragments for navigation -->


    <string name="text_ingredients">Ingredients</string>
    <string name="text_directions">Directions</string>
    <string name="import_new_recipe">Import new recipe</string>
    <string name="import_text">Import</string>


    <string name="minute_short">min</string>
    <string name="recipes_for_you">Discover Recipes</string>
    <string name="recipe_description_title">Description</string>
    <string name="source_link_text">Link</string>
    <string name="import_instructions">You can import recipes from the following websites:</string>
    <string name="discover">Discover</string>
    <string name="my_recipes">My recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checked_items">Checked Items</string>
    <string name="recipe_image_description">Recipe Image</string>
    <string name="tags">Tags</string>
    <string name="no_recipes_with_this_filter">No recipes with this filter</string>
</resources>
