<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/discover_recipes"
        android:icon="@drawable/ic_earth_24dp"
        android:title="@string/discover"
        app:showAsAction="ifRoom" />

    <group>
        <item
            android:id="@id/recipe_list"
            android:icon="@drawable/ic_notebook_24dp"
            android:title="@string/my_recipes"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/shoppingList"
            android:icon="@drawable/ic_basket"
            android:title="@string/shopping_list"
            app:showAsAction="ifRoom" />
    </group>



    <item
        android:id="@+id/userProfile"
        android:icon="@drawable/ic_account_circle_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/userTags"
        android:icon="@drawable/ic_label_multiple"
        android:title="@string/tags"
        app:showAsAction="ifRoom" />
</menu>